trunk/Archive2/24/131a43a94df7d6/output
main.cpp:15:29: error: 'A' was not declared in this scope
  using this_type = decltype(A{}._x())::this_type;
                             ^
main.cpp:15:29: error: 'A' was not declared in this scope
main.cpp:15:30: error: expected ')' before '{' token
  using this_type = decltype(A{}._x())::this_type;
                              ^
main.cpp:15:29: error: 'A' was not declared in this scope
  using this_type = decltype(A{}._x())::this_type;
                             ^
main.cpp:15:29: error: 'A' was not declared in this scope
main.cpp:15:29: error: 'A' was not declared in this scope
main.cpp:15:29: error: 'A' was not declared in this scope
main.cpp:15:20: error: expected type-specifier before 'decltype'
  using this_type = decltype(A{}._x())::this_type;
                    ^
main.cpp:15:32: error: expected unqualified-id before '.' token
  using this_type = decltype(A{}._x())::this_type;
                                ^
